logs/run-20260318_224607.log
🔨 Compiling...
src/main/java/elsd/Interpreter.java:19: error: cannot find symbol
        for (ASTNode stmt : node.statements) {
             ^
  symbol:   class ASTNode
  location: class Interpreter
1 error
